# inaqs

./: .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  gifs_build.sh  inaqs_build.sh  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
armadillo/: docs.html
armadillo-code/examples/: test.py
armadillo/examples/: A.txt  example1
docs/: Makefile  conf.py  gifs.ini  gifs.rst  index.rst  installation.rst  make.bat  qchem.input  usage.rst
example/glycine/: glycine.top
example/glycine/minimization/: minim.mdp  run.sh
example/glycine/nve/: nve.gro  nve.mdp  run.sh
example/glycine/nvt/: nvt.mdp  run.sh
examples/: config.ini
examples/chd/qforce/chd/: 13_CHD_S0min_qforce.itp  frequencies.txt  gas.gro  gas.top  init.xyz
examples/chd/qforce/ht/: 135_HT_S0min_qforce.itp  frequencies.txt  gas.gro
examples/chd/solvents/: SF_13_cyclohexadiene_ES_BHHLYP.inp
examples/chd/solvents/ethanol/S0/: qmmm.mdp  run.sh
examples/chd/solvents/toluene/S0/: gifs_config.ini  qmmm.mdp  run.sh
examples/ctd/qforce/chd/: 13_CHD_S0min_qforce.itp
examples/ctd/qforce/ht/: 135_HT_S0min_qforce.itp  gas.top
examples/ehrenfest/: gifs_config.ini  nve.mdp  run.sh  so2.gro
examples/fssh/qchem/: fssh.in
examples/glycine/: gifs_config.ini  gly.ndx  glycine.gro
examples/glycine/minimization/: run.sh
examples/glycine/nve/: gifs.conf  nve.mdp  run.sh
examples/glycine/nvt/: nvt.mdp  run.sh
examples/glycine/qmmm/: qmmm.mdp  run.sh
examples/hbdi_water/: HBDI_water.tpr  conf-centered.gro  conf.gro  gifs_config.ini  grompp-slim.mdp  grompp.mdp  index.ndx  mdout.mdp  qmmm.top  run.sh
examples/memes/min/: gifs_config.ini  h2_hollow.gro  h2_hollow.top
examples/model/: gifs_config.ini  model.gro  model.top  nve.mdp  qm.ndx  run.sh  run_all.sh  template.gro
examples/qc2gifs/: closs1.in  gifs_config.ini  nve.mdp  run.sh
examples/so2/: gifs_config.ini  nve.mdp  qm.ndx  run.sh  so2.in  so2.top
gifs/: __init__.py  cli.py
gifs_src/: CMakeLists.txt  bomd.cpp  bomd_electronic.cpp  bomd_rescale.cpp  bomd_rescale.hpp  configreader.cpp  decoherence_afssh.cpp  decoherence_afssh.hpp  ehrenfest.hpp  electronic.cpp  example_ref.cpp  fssh.cpp  gifs_implementation.cpp  gifs_implementation.hpp  linkatoms.cpp  qm_model.cpp  qm_model.hpp  qm_qchem.cpp  qm_qchem.hpp  util.cpp  util.hpp
gifs_src/gifs/: Makefile  bomd.cpp  bomd.hpp  bomd_rescale.hpp  configreader.cpp  constants.hpp  conversion.cpp  decoherence_afssh.cpp  decoherence_afssh.hpp  dynamics.cpp  dynamics.hpp  electronic.cpp  electronic.hpp  fssh.cpp  fssh.hpp  gifs.cpp  gifs.hpp  gifs_implementation.cpp  gifs_implementation.hpp  linkatoms.cpp  md.hpp  properties.cpp  properties.hpp  qm.cpp  qm.hpp  qm_interface.cpp  qm_interface.hpp  qm_model.cpp  qm_model.hpp  qm_qchem.cpp  qm_qchem.hpp  qm_tully.cpp  qm_tully.hpp  util.cpp  util.hpp
gifs_src/gifs/gifs/: bomd.cpp  bomd.hpp  bomd_base.hpp  dynamics_draft.hpp  gifs.hpp  gifs_base.hpp  properties.cpp  properties_base.hpp  props.cpp  qm.cpp  qm.hpp  qm_base.hpp  test.cpp  test_phase.cpp
gifs_src/gifs/interface/: interface.hpp
gifs_src/gifs/sh/: es.hpp  interface.hpp  sh.hpp
gifs_src/gifs/tests/: electronic.cpp  main.cpp
gifs_src/tests/: CMakeLists.txt  electronic.cpp  main.cpp
gromacs-4.6.5/: CMakeLists.txt  build.sh  setup.sh
gromacs-4.6.5/include/: constr.h
gromacs-4.6.5/include/types/: inputrec.h
gromacs-4.6.5/man/man1/: do_dssp.1  editconf.1  eneconv.1  g_anadock.1  g_anaeig.1  g_analyze.1  g_angle.1  g_bar.1  g_bond.1  g_bundle.1  g_chi.1  g_cluster.1  g_clustsize.1  g_confrms.1  g_covar.1  g_current.1  g_density.1  g_densmap.1  g_densorder.1  g_dielectric.1  g_dipoles.1  g_disre.1  g_dist.1  g_dos.1  g_dyecoupl.1  g_dyndom.1  g_enemat.1  g_energy.1  g_filter.1  g_gyrate.1  g_h2order.1  g_hbond.1  g_helix.1  g_helixorient.1  g_hydorder.1  g_kinetics.1  g_lie.1  g_mdmat.1  g_membed.1  g_mindist.1  (+55 more)
gromacs-4.6.5/man/man7/: gromacs.7
gromacs-4.6.5/src/: CMakeLists.txt  config.h.cmakein
gromacs-4.6.5/src/gmxlib/: CMakeLists.txt  tpxio.c  txtdump.c
gromacs-4.6.5/src/kernel/: md.c  mdrun.c  readir.c  runner.c  tpbcmp.c
gromacs-4.6.5/src/mdlib/: constr.c  ns.c  qmmm.c  shakef.c  update.c
gromacs-4.6.5/src/shqmmm/: CMakeLists.txt  eshake.cpp  eshake.hpp  eshake_stub.cpp  gmxgifs.c  gmxgifs.h
include/: bomd.hpp  configreader.hpp  constants.hpp  conversion.hpp  decoherence.hpp  dynamics.hpp  electronic.hpp  fssh.hpp  gifs.hpp  inaqs_shared.hpp  linkatoms.hpp  properties.hpp  qm.hpp  qm_interface.hpp
src/: CMakeLists.txt  bomd.cpp  bomd_electronic.cpp  bomd_electronic.hpp  bomd_rescale.hpp  configreader.cpp  conversion.cpp  decoherence_afssh.cpp  decoherence_afssh.hpp  diabatic_seam_dynamics.cpp  diabatic_seam_dynamics.hpp  ehrenfest.cpp  ehrenfest.hpp  electronic.cpp  fssh.cpp  gifs.cpp  gifs_implementation.cpp  gifs_implementation.hpp  properties.cpp  qm_interface.cpp  qm_model.cpp  qm_model.hpp  qm_null.hpp  qm_qchem.cpp  qm_qchem.hpp  util.cpp  util.hpp
src/tests/: CMakeLists.txt  electronic.cpp  util.cpp
tests/: __init__.py  test_gifs.py
util/: atomselect.sh  qc2gifs.py  vc2gifs.py
util/plumed/: gromacs-4.6.5.config  gromacs-4.6.5.diff  prep-plumed.sh
